tests/errors/propagate_resolution_failiure.tau
module a{
    public func foo() {
        asdf;
    }
}
import a;
func main(){
    a::foo();
}
