tests/errors/propagate_resolution_failiure.err
resolver error: unknown symbol
 ==> ./tests/errors/propagate_resolution_failiure.tau:3:9
3 |        asdf;
  |        ^^^^ use of an undefined symbol
